# agent-watch

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-16-v1-foundation.md
src/agent_watch/: __init__.py  budget.py  collector.py  cost.py  decorators.py  otel.py  pricing.yaml  span.py  storage.py  types.py
src/agent_watch/cli/: alerts.py  costs.py  formatting.py  main.py  report.py  status.py  traces.py
tests/: conftest.py  test_budget.py  test_cli_alerts.py  test_cli_costs.py  test_cli_report.py  test_cli_status.py  test_collector.py  test_cost.py  test_decorators.py  test_otel_schema.py  test_span.py  test_storage.py
