[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-watch"
version = "0.1.0"
description = "Observability for AI agents. Track cost, latency, success rates, and token usage with zero framework lock-in."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Shaan Agara" },
]
keywords = ["ai", "agents", "observability", "analytics", "llm", "cost-tracking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.8.0",
]

[project.scripts]
agent-watch = "agent_watch.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_watch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"
